# psa-dashboard

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.example.yaml  fix_flags.py  install.sh  start.bat  start.sh  update.sh
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  models.py
backend/app/alerts/: __init__.py  engine.py
backend/app/api/: dependencies.py  main.py  queries.py  routes_admin_secrets.py  routes_alerts.py  routes_auth.py  routes_billing.py  routes_clients.py  routes_contracts.py  routes_executive.py  routes_filters.py  routes_mtz.py  routes_overview.py  routes_phone.py  routes_queue.py  routes_sync.py  routes_technicians.py
backend/app/auth/: __init__.py  middleware.py  passwords.py  ratelimit.py  session.py  users.py
backend/app/lifecycle/: __init__.py  providers.py
backend/app/phone/: __init__.py  base.py  factory.py  mock.py  models.py  zoom.py
backend/app/psa/: __init__.py  base.py  factory.py  mock.py  superops.py  zendesk.py
backend/app/sync/: engine.py  hooks.py  manager.py  phone_engine.py  scheduler.py
backend/app/utils/: business_hours.py
backend/app/vault/: __init__.py  audit.py  cli.py  crypto.py  keys.py  manager.py  migrate.py
backend/tests/: conftest.py  test_auth_passwords.py  test_auth_ratelimit.py  test_auth_routes.py  test_auth_users.py  test_sync_hooks.py  test_vault_crypto.py  test_vault_lifespan.py  test_vault_manager.py  test_vault_migrate.py
deploy/: SECRETS-DEPLOYMENT.md
docs/: ROADMAP.md  superops-api-schema.md
(+36 files in other folders)
