[project]
name = "psa-dashboard"
version = "0.1.0"
description = "Integotec Manager Metrics Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
